--- a/week 4/index.html
+++ b/week 4/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+   <!--This is a comment. Comments are not displayed in the browser-->
    <h1> Red Bull Music Academy </h1>
    <h2> History </h2>
 
