--- a/week 6/charts/index.html
+++ b/week 6/charts/index.html
@@ -63,7 +63,7 @@
       const ctx = document.getElementById('myChart2'); // draw on canvas
 
       const myChart2 = new Chart(ctx, {
-          type: 'bar',
+          type: 'pie',
           data: {
               labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
               datasets: [{
